Modifiche secondarie html

--- a/html/devicepanel.html
+++ b/html/devicepanel.html
@@ -89,3 +89,7 @@
         </div>
     </div>
 </div>
+
+<script type="text/javascript">
+    $('#confirm-delete').on('shown.bs.modal', function() {})
+</script>
