Riorganizzate le directory del codice. Le sezioni della pagina di impostazione vengono adesso servite separatamente. Le funzioni javascript vengono servite in modo statico memorizzando il file direttamente in flash usando la libreria FS dell'ESP

--- a/resources/html/form_edit_device.html
+++ b/resources/html/form_edit_device.html
@@ -1,7 +1,7 @@
 <form class="form-horizontal edit-device-form" role="form" action="javascript:0">
    <div class="form-group">
       <label class="col-sm-2 control-label" for="frm_edit_dev_name">Nome</label>
-      <div class="col-sm-10"><input type="text" class="form-control" placeholder="Nome dispositivo" id="frm_edit_dev_name" pattern="^[\\w+]{1,16}$" title="Inserire un nome valido, max 16 caratteri" required/></div>
+      <div class="col-sm-10"><input type="text" class="form-control" placeholder="Nome dispositivo" id="frm_edit_dev_name" pattern="^[\w+]{1,16}$" title="Inserire un nome valido, max 16 caratteri" required/></div>
    </div>
    <div class="form-group">
       <label class="col-sm-2 control-label" for="frm_edit_dev_type">Tipo</label>
